# LocalRealtime

./: .gitignore  LICENSE  README.md  pyproject.toml  realtime.py
src/: __init__.py  orchestrator.py
src/audio/: __init__.py  audio.py  vad.py
src/core/: __init__.py  config.py  mlx_guard.py  runtime_types.py
src/models/: __init__.py  kokoro.py  ministral.py  voxtral.py
src/pipeline/: __init__.py  chunking.py  dialogue.py
src/ui/: __init__.py  terminal_ui.py
